@@ -15,9 +15,9 @@ files[] = includes/views/advanced_forum_plugin_style_forum_topic_list.inc
 
 core = 7.x
 
-; Information added by drupal.org packaging script on 2011-11-05
-version = "7.x-2.0-beta2"
+; Information added by drupal.org packaging script on 2011-12-05
+version = "7.x-2.0-rc1"
 core = "7.x"
 project = "advanced_forum"
-datestamp = "1320510629"
+datestamp = "1323079837"
 
