@@ -46,7 +46,6 @@ function advanced_forum_menu() {
     $items['forum/view'] = array(
       'title' => 'View Forums',
       'page callback' => 'advanced_forum_page',
-      'access arguments' => array('access content'),
       'type' => MENU_DEFAULT_LOCAL_TASK,
       'weight' => -100,
     );
@@ -350,7 +349,7 @@ function advanced_forum_links_alter($object, $view_mode, $object_type = 'node') 
 
   if (!empty($object->content['links']['comment'])) {
     $comment_links = $object->content['links']['comment'];
-    $links = $comment_links['#links'];
+    $links = empty($comment_links['#links']) ? array() : $comment_links['#links'];
   }
   else {
     $comment_links = array();
