@@ -6,9 +6,9 @@ base style = silver_bells
 extra style = naked_stacked
 
 
-; Information added by drupal.org packaging script on 2011-11-05
-version = "7.x-2.0-beta2"
+; Information added by drupal.org packaging script on 2011-12-05
+version = "7.x-2.0-rc1"
 core = "7.x"
 project = "advanced_forum"
-datestamp = "1320510629"
+datestamp = "1323079837"
 
