@@ -1,8 +1,19 @@
 
 ****************************** DRUPAL 7 - 2.x BRANCH ********************************
 
+December 04, 2011
+-----------------
+Issue #1339882 by troky: Fixed undefined index in in advanced_forum_links_alter().
+
+November 16, 2011
+-----------------
+Issue #1340512 by troky: Removed obsolete Signatures for forums code.
+Issue #1337470 by troky: Fixed Blue lagoon style.
+Issue #1337412 by salvis: Fixed hook_menu specifies access arguments but not access callback, so can break if something other than user_access is inherited as the callback.
+
 November 05, 2011
 -----------------
+7.x-2.0-BETA2 RELEASE
 Issue #1309966 by troky: Fixed panel initialization code.
 
 October 09, 2011
